--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js",
+    "start": "webpack serve --mode development",
+    "build": "webpack --mode production",
     "lint": "eslint . --fix",
     "test": "jest",
     "coverage": "jest --coverage",
@@ -22,6 +22,7 @@
     "@babel/preset-env": "^7.24.4",
     "@eslint/js": "^9.0.0",
     "babel-loader": "^9.1.3",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.1",
     "css-minimizer-webpack-plugin": "^6.0.0",
     "eslint": "^9.0.0",
@@ -49,6 +50,9 @@
     ],
     "coverageDirectory": "coverage",
     "coverageProvider": "v8",
-    "coverageReporters": ["text", "html"]
+    "coverageReporters": [
+      "text",
+      "html"
+    ]
   }
 }
